Support Iceberg partition stats with PPR

--- a/iceberg/patched-iceberg-core/pom.xml
+++ b/iceberg/patched-iceberg-core/pom.xml
@@ -96,6 +96,7 @@
                   <excludes>
                       **/HadoopInputFile.class
                       **/HadoopTableOperations.class
+                      **/SnapshotProducer.class
                   </excludes>
                 </artifactItem>
               </artifactItems>
